kubedef/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: ahmedlekan/vprofiledb
        ports:
        - name: vpro-db-port
          containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: vpro-db-data
        resources:
          limits:
            cpu: 250m
            memory: 500Mi
          requests:
            cpu: 500m
            memory: 1G
      volumes:
      - name: vpro-db-data
        persistentVolumeClaim:
          claimName: db-pvc
