kubedef/mcdeploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromc
  labels:
    app: vpromc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpromc
  template:
    metadata:
      labels:
        app: vpromc
    spec:
      containers:
      - name: vpromc
        image: memcached
        ports:
        - name: vpromc-port
          containerPort: 11211
        resources:
          limits:
            cpu: "100m"
            memory: "128Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
