kubedef/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc01
spec:
  type: ClusterIP
  selector:
    app: vpromc
  ports:
    - port: 3306
      targetPort: vpromc-port
      protocol: TCP
